--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>IOC TMS</title>
-    <meta name="description" content="International Orthodox Christian Translation Management System.">
+    <title>OCMC TMS (Translation Management System)</title>
+    <meta name="description" content="Orthodox Christian Mission Center Translation Management System.">
     <meta name="keywords" content="Orthodox, Christian, Liturgical, Translation, Management, OCMC">
   </head>
     <script type=’application/ld+json’>
@@ -27,9 +27,9 @@
           “@context”: “https://ioc-liturgical-db.org”,
           “@type”: “WebApplication”,
           “brand”: “OCMC Tools for Liturgical Translation and Research”,
-          “name”: “IOC Translation Management System”,
+          “name”: “OCMC Translation Management System”,
           "availableLanguage": "el, en"
-          “description”: “The IOC Translation Management System provides tools for translators of liturgical and other Eastern Orthodox Christian texts.”
+          “description”: “The OCMC Translation Management System provides tools for translators of liturgical and other Eastern Orthodox Christian texts.”
         }
   </script>
   <body>
