--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>OCMC TMS (Translation Management System)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Orthodox Christian Mission Center Translation Management System.">
     <meta name="keywords" content="Orthodox, Christian, Liturgical, Translation, Management, OCMC">
   </head>
