--- a/public/index.html
+++ b/public/index.html
@@ -18,19 +18,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>OCMC TMS (Translation Management System)</title>
+    <title>OLW (Online Liturgical Workbench)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Orthodox Christian Mission Center Translation Management System.">
     <meta name="keywords" content="Orthodox, Christian, Liturgical, Translation, Management, OCMC">
   </head>
     <script type=’application/ld+json’>
       {
-          “@context”: “https://ioc-liturgical-db.org”,
+          “@context”: “https://olw.ocmc.org”,
           “@type”: “WebApplication”,
           “brand”: “OCMC Tools for Liturgical Translation and Research”,
-          “name”: “OCMC Translation Management System”,
+          “name”: “OCMC Online Liturgical Workbench”,
           "availableLanguage": "el, en"
-          “description”: “The OCMC Translation Management System provides tools for translators of liturgical and other Eastern Orthodox Christian texts.”
+          “description”: “The OCMC Online Liturgical Workbench provides tools for translators of liturgical and other Eastern Orthodox Christian texts.”
         }
   </script>
   <body>
