--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/navbar.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/alwb.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/video-react.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
