--- a/wwwTest/index.html
+++ b/wwwTest/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="/favicon.ico"><link rel="stylesheet" href="/css/font-awesome.css"><title>IOC-TMS</title><link href="/static/css/main.cb8020fb.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/static/js/main.a9dfff0c.js"></script></body><script>document.querySelector('.nav').addEventListener('click', e => {
-      e.target.classList.toggle('visible')
-    });
-    var credentials = {
-      username: "mmouse"
-      , password: "areYouKidding?"
-      , authenticated: false
-    };</script></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="/favicon.ico"><link rel="stylesheet" href="/css/font-awesome.css"><link rel="stylesheet" href="/css/bootstrap.min.css"><link rel="stylesheet" href="/css/bootstrap-theme.min.css"><link rel="stylesheet" href="/css/navbar.css"><link rel="stylesheet" href="/css/alwb.css"><link rel="stylesheet" href="/css/video-react.css"><title>OLW (Online Liturgical Workbench)</title><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Orthodox Christian Mission Center Translation Management System."><meta name="keywords" content="Orthodox, Christian, Liturgical, Translation, Management, OCMC"><link href="/static/css/main.39edab82.css" rel="stylesheet"></head><body><div id="root"></div><script type="’application/ld+json’">{
+          “@context”: “https://olw.ocmc.org”,
+          “@type”: “WebApplication”,
+          “brand”: “OCMC Tools for Liturgical Translation and Research”,
+          “name”: “OCMC Online Liturgical Workbench”,
+          "availableLanguage": "el, en"
+          “description”: “The OCMC Online Liturgical Workbench provides tools for translators of liturgical and other Eastern Orthodox Christian texts.”
+        }</script><script type="text/javascript" src="/static/js/main.c8fe44a1.js"></script></body></html>
