--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/video-react.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tag above.
-      It will be replaced with the URL of the `public` folder during the build.
+      It will be replaced with the URL of the `public` folder during the ioc-tms-website.v2023.06.02.01.
       Only files inside the `public` folder can be referenced from the HTML.
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+      Learn how to configure a non-root public URL by running `npm run ioc-tms-website.v2023.06.02.01`.
     -->
     <title>OLW (Online Liturgical Workbench)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,10 +31,10 @@
       If you open it directly in the browser, you will see an empty page.
 
       You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      The ioc-tms-website.v2023.06.02.01 step will place the bundled scripts into the <body> tag.
 
       To begin the development, run `npm start`.
-      To create a production bundle, use `npm run build`.
+      To create a production bundle, use `npm run ioc-tms-website.v2023.06.02.01`.
     -->
     <script type=’application/ld+json’>
       {
